# solar-collector

./: README.md  casadi-toy-solve-example.ipynb  compare_with_data.py  custom_fluid_properties.py  custom_syltherm_properties.py  demo_simulate_module.ipynb  example_plot_correlation.py  fit_fluid_property_correlations.ipynb  heat_eqn_1d.py  make_comparison_plots.py  make_simulation_plots.py  pipe_fluid_mixing_models.py  pipe_heat_transfer_theory.py  pyomo-toy-solve-example.ipynb  pyproject.toml  run-solar-collector-dae-pyo-sims.ipynb  run_simulations.py  simple-pipe-flow-pde.ipynb  solar-collector-dt-model.ipynb
data/properties/fluids/: SYLTHERM800_data.csv
dev_guides/: dippr_correlations_explained.md  solar_trough_control_review.md  syltherm_composition_analysis.md  thermo_assessment.md
latex_docs/: main.tex  references.bib
simulations/steps/sim_specs/: ambient_disp_test.yaml  ambient_ss.yaml  ambient_ss_const.yaml  init300C_irr_steps.yaml  init300C_irr_steps_const.yaml  init300C_ss.yaml  init300C_ss_const.yaml  steps_01.yaml
src/fluids/: __init__.py  fluid_properties.py  syltherm_800.py
src/simulate/: __init__.py  core.py  input_funcs.py  inputs.py  integrators.py  results.py  setup.py
src/solar_collector/: config.py  fluid_properties.py  heat_eqn_1d.py  heat_eqn_1d_pyomo.py  heat_transfer.py  pyomo-examples.ipynb  solar_collector.ipynb  solar_collector_dae_pyo.py  solar_collector_dae_pyo_two_temp.py
tests/: test_dittus_boelter.py  test_fitting_methods.py  test_simulate.py  test_simulate_setup.py  test_solar_collector_dae_pyo_two_temp.py  test_syltherm800.py
