[project]
name = "solar-collector"
version = "0.1.0"
description = "Dynamic simulation of a parabolic mirror solar collector project"
authors = [{ name = "Bill Tubbs" }]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["solar", "energy", "dynamic", "simulation", "renewable", "system"]

dependencies = [
    "casadi",
    "pyomo",
    "numpy",
    "matplotlib",
    "pandas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solar_collector"]