[project]
name = "solar-collector"
version = "0.1.0"
description = "Dynamic simulation of a parabolic mirror solar collector project"
authors = [{ name = "Bill Tubbs" }]
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["solar", "energy", "dynamic", "simulation", "renewable", "system"]

dependencies = [
    "casadi",
    "pyomo",
    "numpy",
    "scipy",
    "sympy",
    "matplotlib",
    "pandas",
    "tqdm",
    "pyyaml",
    "ipykernel",
    "ipython"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/solar_collector"]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = ["E", "F", "W", "C90"]
ignore = ["E501"]  # Line too long (handled by formatter)